restyled the news page and aligned the gridings in order to avoid conflicts

--- a/css/news.css
+++ b/css/news.css
@@ -6,10 +6,10 @@ html,body{
 }
 section#news{
 	height: auto;
-	margin-left: 10%;
-	margin-right: 10%;
+	margin-left: 5%;
+	margin-right: 5%;
 	margin-bottom: 5%;
-	background-color: #ffffff;
+	background-color: #f0f5e7;
 }
 hr{
 	width: 80%;
@@ -32,6 +32,7 @@ hr{
 	margin: 3%;
 	text-align: left;
 	font-family: 'Nunito', sans-serif;
+	background-color: #ffffff;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 #comment{
